dashboard page, request to become seller